--- a/User Controls/SearchTeacherUC.xaml
+++ b/User Controls/SearchTeacherUC.xaml
@@ -7,6 +7,35 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <!-- H1 -->
+        <Label Content="Teacher Database" HorizontalAlignment="Left" VerticalAlignment="top"
+               FontSize="40" Margin="15,0,0,0" FontWeight="Bold"/>
+
+        <!-- Top Search Bar -->
+        <Border Background="#E0E0E0" CornerRadius="25" Height="50" Width="300" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,15,-2">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <TextBox x:Name="SearchTextBox" Panel.ZIndex="2" Background="Transparent" FontSize="20" Margin="10" VerticalAlignment="Center"/>
+                <Button Content="Search" Width="100" Height="30" Margin="10" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+                <Label Content="Search..." VerticalAlignment="Center" HorizontalAlignment="Left" Margin="15,0,0,0">
+                    <Label.Style>
+                        <Style TargetType="Label">
+                            <Setter Property="Visibility" Value="Collapsed"/>
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding Text.IsEmpty, ElementName=SearchTextBox}" Value="True">
+                                    <Setter Property="Visibility" Value="Visible"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Label.Style>
+                </Label>
+            </Grid>
+        </Border>
+
+        <!-- Data Table -->
+        <DataGrid ItemsSource="{Binding Students}"  AutoGenerateColumns="True" Margin="20,80,20,20"/>
     </Grid>
 </UserControl>
