--- a/User Controls/SettingsUC.xaml
+++ b/User Controls/SettingsUC.xaml
@@ -7,6 +7,15 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <!-- Row for Label and CheckBox -->
+        </Grid.RowDefinitions>
+
+        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Label Content="Theme" FontWeight="Bold" Margin="0,30,150,0"/>
+            <CheckBox FontSize="26" Margin="0,30,0,0"/>
+        </StackPanel>
     </Grid>
+
 </UserControl>
