--- a/ResourceDictionaries/GlobalStyles.xaml
+++ b/ResourceDictionaries/GlobalStyles.xaml
@@ -99,5 +99,10 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
+
+    <Style TargetType="TextBlock">
+        <Setter Property="FontSize" Value="22"/>
+        <Setter Property="Foreground" Value="White"/>
+
+    </Style>
 </ResourceDictionary>
