--- a/User Controls/ReportUC.xaml
+++ b/User Controls/ReportUC.xaml
@@ -7,6 +7,13 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <StackPanel Orientation="Vertical">
+            <TextBlock Text="Report the issue you are facing to the manufacturer." Margin="10,0,0,0"/>
+            <Label Content="Subject" HorizontalAlignment="Left" Margin="10,20,0,0"/>
+            <TextBox Width="750" Height="30" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,0,0,0"/>
+            <Label Content="Issue" HorizontalAlignment="Left" Margin="10,20,0,0"/>
+            <TextBox Width="750" Height="200" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,0,0,0"/>
+            <Button Content="Submit" Margin="0,10,0,0"/>
+        </StackPanel>
     </Grid>
 </UserControl>
