--- a/User Controls/AddTeacherUC.xaml
+++ b/User Controls/AddTeacherUC.xaml
@@ -96,7 +96,7 @@
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 20">
-                <Button Content="Submit" Margin="0 10 5 0"/>
+                <Button x:Name="SubmitButton" Content="Submit" Click="SubmitButton_Click" Margin="0 10 5 0"/>
                 <Button Content="Reset"  Margin="5 10 0 0"/>
             </StackPanel>
         </StackPanel>
