--- a/User Controls/AddStaffUC.xaml
+++ b/User Controls/AddStaffUC.xaml
@@ -82,7 +82,7 @@
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 20">
-                <Button Content="Submit" Margin="0 10 5 0"/>
+                <Button x:Name="SubmitButton" Click="SubmitButton_Click" Content="Submit" Margin="0 10 5 0"/>
                 <Button Content="Reset"  Margin="5 10 0 0"/>
             </StackPanel>
         </StackPanel>
