Fetch Data From Database's StaffTable and Show in DataGrid and keep it ReadOnly

--- a/User Controls/SearchStaffUC.xaml
+++ b/User Controls/SearchStaffUC.xaml
@@ -36,6 +36,6 @@
         </Border>
 
         <!-- Data Table -->
-        <DataGrid ItemsSource="{Binding Students}"  AutoGenerateColumns="True" Margin="20,80,20,20"/>
+        <DataGrid x:Name="StaffDataGrid" IsReadOnly="True"  AutoGenerateColumns="True" Margin="20,80,20,20"/>
     </Grid>
 </UserControl>
