--- a/User Controls/AddStudentUC.xaml
+++ b/User Controls/AddStudentUC.xaml
@@ -98,7 +98,7 @@
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 20">
                 <Button x:Name="Submit" Content="Submit" Margin="0 10 5 0" Click="SubmitButton_Click"/>
-                <Button Content="Reset"  Margin="5 10 0 0"/>
+                <Button x:Name="Reset" Content="Reset"  Margin="5 10 0 0" Click="ResetButton_Click"/>
             </StackPanel>
         </StackPanel>
     </Grid>
