--- a/User Controls/AddTeacherUC.xaml
+++ b/User Controls/AddTeacherUC.xaml
@@ -97,7 +97,7 @@
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 20">
                 <Button x:Name="SubmitButton" Content="Submit" Click="SubmitButton_Click" Margin="0 10 5 0"/>
-                <Button Content="Reset"  Margin="5 10 0 0"/>
+                <Button x:Name="ResetButton" Content="Reset"  Click="ResetButton_Click" Margin="5 10 0 0"/>
             </StackPanel>
         </StackPanel>
     </Grid>
