--- a/User Controls/MenuUC.xaml
+++ b/User Controls/MenuUC.xaml
@@ -28,11 +28,11 @@
                     <GradientStop Color="#6610F2" Offset="1"/>
                 </LinearGradientBrush>
             </Border.Background>
-            <TextBlock Text="Card 1" Foreground="White" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <TextBlock Text="Grade 1" Foreground="White" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
         </Border>
 
         <!-- Card 2 -->
-        <Border Grid.Row="0" Grid.Column="1" Margin="10" CornerRadius="15">
+        <Border Grid.Row="0" Grid.Column="1" Margin="10,13,10,7" CornerRadius="15">
             <!-- Customize card appearance here -->
             <Border.Background>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
@@ -40,7 +40,7 @@
                     <GradientStop Color="#F21010" Offset="1"/>
                 </LinearGradientBrush>
             </Border.Background>
-            <TextBlock Text="Card 2" Foreground="White" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <TextBlock Text="Grade 2" Foreground="White" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" />
         </Border>
 
         <!-- Card 3 -->
@@ -52,7 +52,7 @@
                     <GradientStop Color="#10F210" Offset="1"/>
                 </LinearGradientBrush>
             </Border.Background>
-            <TextBlock Text="Card 3" Foreground="White" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <TextBlock Text="Grade 3" Foreground="White" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
         </Border>
 
         <!-- Row 2 -->
@@ -65,7 +65,7 @@
                     <GradientStop Color="#F26B10" Offset="1"/>
                 </LinearGradientBrush>
             </Border.Background>
-            <TextBlock Text="Card 4" Foreground="White" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <TextBlock Text="Grade 4" Foreground="White" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0"/>
         </Border>
 
         <!-- Card 5 -->
@@ -77,7 +77,7 @@
                     <GradientStop Color="#F2A510" Offset="1"/>
                 </LinearGradientBrush>
             </Border.Background>
-            <TextBlock Text="Card 5" Foreground="White" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <TextBlock Text="Grade 5" Foreground="White" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
         </Border>
 
         <!-- Card 6 -->
@@ -89,7 +89,7 @@
                     <GradientStop Color="#10F2A1" Offset="1"/>
                 </LinearGradientBrush>
             </Border.Background>
-            <TextBlock Text="Card 6" Foreground="White" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <TextBlock Text="Grade 6" Foreground="White" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
         </Border>
 
         <!-- Row 3 -->
@@ -102,7 +102,7 @@
                     <GradientStop Color="#F2106B" Offset="1"/>
                 </LinearGradientBrush>
             </Border.Background>
-            <TextBlock Text="Card 7" Foreground="White" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <TextBlock Text="Grade 7" Foreground="White" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
         </Border>
 
         <!-- Card 8 -->
@@ -114,7 +114,7 @@
                     <GradientStop Color="#F21089" Offset="1"/>
                 </LinearGradientBrush>
             </Border.Background>
-            <TextBlock Text="Card 8" Foreground="White" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <TextBlock Text="Grade 8" Foreground="White" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
         </Border>
 
         <!-- Card 9 -->
@@ -126,7 +126,7 @@
                     <GradientStop Color="#104DF2" Offset="1"/>
                 </LinearGradientBrush>
             </Border.Background>
-            <TextBlock Text="Card 9" Foreground="White" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <TextBlock Foreground="White" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </Border>
     </Grid>
 </UserControl>
