Connect Report Email sender to Default Mail

--- a/User Controls/ReportUC.xaml
+++ b/User Controls/ReportUC.xaml
@@ -10,10 +10,10 @@
         <StackPanel Orientation="Vertical">
             <Label Content="Report the issue you are facing to the manufacturer." HorizontalAlignment="Left" Margin="10,10,0,0"/>
             <Label Content="Subject" HorizontalAlignment="Left" Margin="10,20,0,0"/>
-            <TextBox Width="750" Height="30" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,0,0,0"/>
+            <TextBox Name="SubjectTextBox" Width="750" Height="30" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,0,0,0"/>
             <Label Content="Issue" HorizontalAlignment="Left" Margin="10,20,0,0"/>
-            <TextBox Width="750" Height="200" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,0,0,0"/>
-            <Button Content="Submit" Margin="0,10,0,0"/>
+            <TextBox Name="IssueTextBox" Width="750" Height="200" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,0,0,0"/>
+            <Button x:Name="SubmitButton" Click="SubmitButton_Click" Content="Submit" Margin="0,10,0,0"/>
         </StackPanel>
     </Grid>
 </UserControl>
