--- a/ResourceDictionaries/GlobalStyles.xaml
+++ b/ResourceDictionaries/GlobalStyles.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style TargetType="Label">
-        <Setter Property="FontSize" Value="22" />
+        <Setter Property="FontSize" Value="{Binding Value, ElementName=FontSizeSlider}" />
         <Setter Property="FontFamily" Value="Segoe UI" />
         <Setter Property="Foreground" Value="White" />
         <Setter Property="HorizontalContentAlignment" Value="Right"/>
