--- a/User Controls/SettingsUC.xaml
+++ b/User Controls/SettingsUC.xaml
@@ -21,6 +21,7 @@
                 <Slider x:Name="FontSizeSlider"  Width="200" Height="22" Minimum="20" Maximum="40" Margin="0,20,0,0"  IsSnapToTickEnabled="True" TickFrequency="1"/>
                 <Label HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0" Content="{Binding ElementName=FontSizeSlider, Path=Value}" />
             </StackPanel>
+            <Button Name="SaveButton" Content="Save" Margin="0,10,0,0" Click="SaveButton_Click"/>
         </StackPanel>
     </Grid>
 
