Change main content background to black

--- a/ResourceDictionaries/LightTheme.xaml
+++ b/ResourceDictionaries/LightTheme.xaml
@@ -6,7 +6,7 @@
         <GradientStop Color="#26008F" Offset="1.3"/>
     </LinearGradientBrush>
 
-    <SolidColorBrush x:Key="mainContentBackgroundColor" Color="white" Opacity="0.3"/>
+    <SolidColorBrush x:Key="mainContentBackgroundColor" Color="black" Opacity="0.3"/>
 
     <!--Background Colors-->
     <Color x:Key="primaryBackColor1">#78002E</Color>
